Add remove files

--- a/notebook/00_prerequisite.ipynb
+++ b/notebook/00_prerequisite.ipynb
@@ -15,7 +15,8 @@
     "!wget https://github.com/mdsung/20220329_python_datascience_lecture/raw/main/notebook/02_naive_lr.ipynb -o notebook/02_naive_lr.ipynb\n",
     "!wget https://github.com/mdsung/20220329_python_datascience_lecture/raw/main/notebook/03_feature_engineer_lr.ipynb -o notebook/03_feature_engineer_lr.ipynb\n",
     "!wget https://github.com/mdsung/20220329_python_datascience_lecture/raw/main/notebook/04_normalized_lr.ipynb -o notebook/04_normalized_lr.ipynb\n",
-    "!wget https://github.com/mdsung/20220329_python_datascience_lecture/raw/main/notebook/pr_report.html -o notebook/pr_report.html\n"
+    "!wget https://github.com/mdsung/20220329_python_datascience_lecture/raw/main/notebook/pr_report.html -o notebook/pr_report.html\n",
+    "!rm *.ipynb *.html *.csv"
    ]
   }
  ],
