Revise path for colab users

--- a/01_EDA.ipynb
+++ b/01_EDA.ipynb
@@ -136,9 +136,9 @@
    "outputs": [],
    "source": [
     "# read data\n",
-    "aps_input = pd.read_csv('../data/processed/aps_input.csv')\n",
-    "other_input = pd.read_csv('../data/processed/other_input.csv')\n",
-    "outcomes = pd.read_csv('../data/processed/outcomes.csv')"
+    "aps_input = pd.read_csv('data/processed/aps_input.csv')\n",
+    "other_input = pd.read_csv('data/processed/other_input.csv')\n",
+    "outcomes = pd.read_csv('data/processed/outcomes.csv')"
    ]
   },
   {
@@ -1006,7 +1006,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.to_pickle('../data/processed/data.pkl')"
+    "data.to_pickle('data/processed/data.pkl')"
    ]
   }
  ],
