--- a/02_naive_lr.ipynb
+++ b/02_naive_lr.ipynb
@@ -49,7 +49,7 @@
     }
    ],
    "source": [
-    "data = pd.read_pickle('../data/processed/data.pkl')\n",
+    "data = pd.read_pickle('data/processed/data.pkl')\n",
     "data.columns"
    ]
   },
