--- a/03_feature_engineer_lr.ipynb
+++ b/03_feature_engineer_lr.ipynb
@@ -19,7 +19,7 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "data = pd.read_pickle('../data/processed/data.pkl')"
+    "data = pd.read_pickle('data/processed/data.pkl')"
    ]
   },
   {
