--- a/04_normalized_lr.ipynb
+++ b/04_normalized_lr.ipynb
@@ -19,7 +19,7 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "data = pd.read_pickle('../data/processed/data.pkl')\n"
+    "data = pd.read_pickle('data/processed/data.pkl')\n"
    ]
   },
   {
