Add data.pkl download script

--- a/00_prerequisite.ipynb
+++ b/00_prerequisite.ipynb
@@ -12,6 +12,15 @@
     "!wget https://github.com/mdsung/20220329_python_datascience_lecture/raw/main/data/processed/outcomes.csv -P data/processed\n",
     "!wget https://github.com/mdsung/20220329_python_datascience_lecture/raw/main/pr_report.html -P ./\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!wget https://github.com/mdsung/20220329_python_datascience_lecture/raw/main/data/processed/data.pkl -P data/processed"
+   ]
   }
  ],
  "metadata": {
