Add pip install module scripts

--- a/00_prerequisite.ipynb
+++ b/00_prerequisite.ipynb
@@ -10,7 +10,20 @@
     "!wget https://github.com/mdsung/20220329_python_datascience_lecture/raw/main/data/processed/aps_input.csv -P data/processed/\n",
     "!wget https://github.com/mdsung/20220329_python_datascience_lecture/raw/main/data/processed/other_input.csv -P data/processed\n",
     "!wget https://github.com/mdsung/20220329_python_datascience_lecture/raw/main/data/processed/outcomes.csv -P data/processed\n",
-    "!wget https://github.com/mdsung/20220329_python_datascience_lecture/raw/main/pr_report.html -P ./\n"
+    "!wget https://github.com/mdsung/20220329_python_datascience_lecture/raw/main/pr_report.html -P ./"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install pandas==1.3.5\n",
+    "!pip install matplotlib\n",
+    "!pip install pandas-profiling\n",
+    "!pip install matplotlib\n",
+    "\n"
    ]
   },
   {
